[package]
name = "uncockblocker"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "^0.5.2"
rand = "^0.8.5"
base64ct = { version = "^1.6.0", features = ["alloc"] }
num_cpus = "^1.16.0"
crossbeam-channel = "^0.5.11"
clap = { version = "^4.4.16", features = ["derive"] }
